force-app/main/default/objects/copado__Feature_Toggle__mdt/fields/copado__Custom_Permission_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Custom_Permission_Name__c</fullName>
    <label>Custom Permission Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>