force-app/main/default/objects/copado__Feature_Toggle__mdt/fields/copado__Feature_Toggle_Group__c.field-meta.xml
<CustomField>
    <fullName>copado__Feature_Toggle_Group__c</fullName>
    <label>Feature Toggle Group</label>
    <referenceTo>copado__Feature_Toggle_Group__mdt</referenceTo>
    <relationshipLabel>Feature Toggles</relationshipLabel>
    <relationshipName>Feature_Toggles</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>