force-app/main/default/objects/copado__Feature_Toggle__mdt/fields/copado__Full_Description__c.field-meta.xml
<CustomField>
    <fullName>copado__Full_Description__c</fullName>
    <label>Full Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>