force-app/main/default/objects/copado__Feature_Toggle__mdt/fields/copado__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>copado__Short_Description__c</fullName>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>