force-app/main/default/objects/copado__Feature_Toggle__mdt/listViews/copado__All_Feature_Toggles.listView-meta.xml
<ListView>
    <fullName>copado__All_Feature_Toggles</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>copado__Order__c</columns>
    <columns>copado__Short_Description__c</columns>
    <columns>copado__Feature_Toggle_Group__c</columns>
    <columns>copado__Custom_Permission_Name__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All Feature Toggles</label>
    <language>en_US</language>
</ListView>